# qt-projects

./: README.md
Qt hypothroid/gipo/: CMakeLists.txt  about.cpp  about.h  about.ui  dialog.cpp  dialog.h  dialog.ui  gipo.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt multithread/: Task4.pro  Task4.pro.user.16  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h  worker.cpp  worker.h
Qt-canny/Canny/: CMakeLists.txt  Canny.pro  about.cpp  about.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
Qt-registry/registry/: CMakeLists.txt  about.cpp  about.h  about.ui  dialog.cpp  dialog.h  dialog.ui  mainwindow.ui  mytreeview.cpp  mytreeview.h  registry.pro  registry_ru.ts  registrymodel.cpp  spinboxdelegate.h  tablemodel.cpp  tablemodel.h
registry/: create_translation.bat  main.cpp  mainwindow.cpp  mainwindow.h  registry_ru.qm  registrymodel.h  spinboxdelegate.cpp
